add slack send notification
